--- a/configs/x4.yml
+++ b/configs/x4.yml
@@ -47,6 +47,6 @@ normalize: True
 threads: 1
 
 ## data specification
-data_path: './dataset/DIV2K_A/'
+data_path: '../dataset/DIV2K_A/'
 test_path: '/dataset/SR/RLSR/val_phase/'
 eval_sets: ['DIV2K']
