--- a/configs/second_best_model.yml
+++ b/configs/second_best_model.yml
@@ -1,9 +1,9 @@
-model: 'DownRepConv_v2'
+model: 'DownRepConv_v2_backbone_res'
 comment: 'Val_BEST'
 ## parameters for plain
 scale: 4
 colors: 3
-m_plainsr: 3
+m_plainsr: 1
 c_plainsr: 32
 with_bn: 0
 act_type: 'gelu'
