--- a/configs/x4_down_combined4.yml
+++ b/configs/x4_down_combined4.yml
@@ -1,4 +1,4 @@
-model: 'PlainRepConv_BlockV2'
+model: 'DownRepConv'
 comment: 'Val_BEST'
 ## parameters for plain
 scale: 4
@@ -47,9 +47,9 @@ normalize: True
 num_workers: 8
 
 ## data specification
-data_path: '/dataset/SR/AIS2024/'
-test_path: '/dataset/SR/AIS2024/val_phase/'
-val_set: 'DIV2K'
+data_path: '../datasets/AIS2024/'
+test_path: '../datasets/AIS2024/val_phase/'
+val_set: 'Combined4'
 train_set: 'Combined4'
 
 av1 : True
