--- a/configs/x4_repdown.yml
+++ b/configs/x4_repdown.yml
@@ -1,10 +1,10 @@
-model: 'PlainRepConv_BlockV2'
+model: 'RepNetwork_V002'
 comment: 'Val_BEST'
 ## parameters for plain
 scale: 4
 colors: 3
 m_plainsr: 3
-c_plainsr: 16
+c_plainsr: 32
 with_bn: 0
 act_type: 'gelu'
 pretrain:
@@ -13,12 +13,12 @@ pretrain:
 loss: 'l1'
 
 ## optimizer:
-optimizer: adam
-lr: 0.0005
+optimizer: adamw
+lr: 0.0001
 
 ## scheduler:
-scheduler: 'CosineAnnealingWarmRestarts'
-decays: [200, 400, 600]
+scheduler: 'MultiStepLR'
+decays: [100, 200, 400, 600]
 gamma: 0.5
 wd: 0.0
 min_lr: 0.000001
@@ -50,7 +50,12 @@ num_workers: 8
 data_path: '/dataset/SR/AIS2024/'
 test_path: '/dataset/SR/AIS2024/val_phase/'
 val_set: 'DIV2K'
-train_set: 'Combined4'
+train_set: 'DIV2K'
+
+# data_path: '../datasets/AIS2024/'
+# test_path: '../datasets/AIS2024/val_phase/'
+# val_set: 'Combined4'
+# train_set: 'Combined4'
 
 av1 : True
 qp_value : 31
