--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,5 @@ chekpoints/*
 *.cpython-38.pyc
 source/models/__pycache__/basicblock.cpython-38.pyc
 source/models/__pycache__/*
+source/__pycache__/losses.cpython-38.pyc
+*/*/*.cpython-38.pyc
