--- a/configs/l2_finetune_best_model_repv12.yml
+++ b/configs/l2_finetune_best_model_repv12.yml
@@ -24,7 +24,7 @@ wd: 0.0
 min_lr: 0.000001
 
 ## parameters for model training
-epochs: 200
+epochs: 800
 
 patch_size: 384
 batch_size: 8
@@ -56,4 +56,4 @@ train_set: 'DIV2K'
 
 av1 : True
 qp_value : 31
-qp_all: False
+all_qp: False
