--- a/configs/AIS_lasttune_model.yml
+++ b/configs/AIS_lasttune_model.yml
@@ -52,7 +52,7 @@ num_workers: 8
 data_path: '../datasets/'
 test_path: '../datasets/RTSR/val_lr'
 val_set: 'DIV2K'
-train_set: 'DIV2K'
+train_set: 'Combined4'
 
 av1 : True
 qp_value : 31
