--- a/configs/AIS_lasttune_model.yml
+++ b/configs/AIS_lasttune_model.yml
@@ -52,11 +52,11 @@ num_workers: 8
 data_path: '../datasets/'
 test_path: '../datasets/RTSR/val_lr'
 val_set: 'DIV2K'
-train_set: 'DIV2K'
+train_set: 'Combined4'
 
 av1 : True
 qp_value : 31
-all_qp: False
+all_qp: True
 a_aug: False
 distillation: True
 bias: False
